@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
-    android:versionCode="280"
+    android:versionCode="285"
     android:versionName="2.3" >
 
     <uses-sdk
