@@ -173,3 +173,6 @@ MessageCounter 2.1.20 [December 2013]
  - [CHANGED]	Settings menu to actionbar
  - [CHANGED]	UI Tweaks
  - [ADDED]		Widget update broadcast when sending message
+ 
+ MessageCounter 2.3.14 [July 2014]
+ - [ADDED]		Animation for progressbar
